infra/argocd/httproute.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: argocd
#   namespace: argocd
# spec:
#   parentRefs:
#     - name: homelab
#       namespace: envoy-gateway-system
#   hostnames:
#     - "argocd.kyledev.co"
#   rules:
#     - backendRefs:
#         - name: argocd-server
#           port: 80
# ---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-int
  namespace: argocd
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "argocd.int.kyledev.co"
    - "argocd.ts.kyledev.co"
  rules:
    - backendRefs:
        - name: argocd-server
          port: 80
