infra/argocd/securitypolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: argocd
  namespace: argocd
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: argocd
  extAuth:
    grpc:
      backendRefs:
        - group: ""
          kind: Service
          name: homelab-envoy-proxy-bouncer
          port: 8080
          namespace: envoy-gateway-system
